--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
           node-version: 18
       - run: npm install
       - run: npm run build
-      
+
       - name: Deploy
         uses: easingthemes/ssh-deploy@main
         env:
@@ -22,4 +22,4 @@ jobs:
           SOURCE: dist/
           REMOTE_HOST: '${{ secrets.REMOTE_HOST }}'
           REMOTE_USER: '${{ secrets.REMOTE_USER }}'
-          TARGET: '${{ secrets.TARGET }}'
+          TARGET: '${{ secrets.TARGET }}/dist/'
