--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "markmap-toolbar": "^0.15.0",
     "markmap-view": "^0.15.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wouter": "^2.12.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
