--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,18 +5,22 @@ name: deploy to vps
       - main
 jobs:
   build:
+    name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: npm install
-      - run: npm run build
+          
+      - name: Build
+        run: |
+          npm install
+          npm run build
       
-      - name: Deploy
+      - name: Deploy to server
         uses: easingthemes/ssh-deploy@main
-        env:
+        with:
           SSH_PRIVATE_KEY: '${{ secrets.ACCESS_TOKEN }}'
           ARGS: '-avz --delete'
           SOURCE: dist/
