--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           npm install
           npm run build
       
-      - name: Deploy to server
+      - name: Upload dist to server
         uses: easingthemes/ssh-deploy@main
         with:
           SSH_PRIVATE_KEY: '${{ secrets.ACCESS_TOKEN }}'
