--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,25 +8,26 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout dist repo
-        uses: actions/checkout@v4
+      # - name: Checkout dist repo
+      #   uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 18
+      # - name: Setup Node
+      #   uses: actions/setup-node@v4
+      #   with:
+      #     node-version: 18
           
-      - name: Build
-        run: |
-          npm install
-          npm run build
-          ls -lh
-      
-      - name: Upload dist to server
-        uses: easingthemes/ssh-deploy@main
+      # - name: Build
+      #   run: |
+      #     npm install
+      #     npm run build
+      #     ls -lh
+
+      - name: executing remote ssh commands using ssh key
+        uses: appleboy/ssh-action@v1.0.1
         with:
-          SSH_PRIVATE_KEY: '${{ secrets.SSH_PRIVATE_KEY }}'
-          SOURCE: dist/
-          REMOTE_HOST: '${{ secrets.REMOTE_HOST }}'
-          REMOTE_USER: '${{ secrets.REMOTE_USER }}'
-          TARGET: '${{ secrets.TARGET }}'
+          host: ${{ secrets.REMOTE_HOST }}
+          username: ${{ secrets.REMOTE_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.PORT }}
+          script: whoami
+
