--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,26 +8,29 @@ jobs:
     name: Deploy
     runs-on: ubuntu-latest
     steps:
-      # - name: Checkout dist repo
-      #   uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      # - name: Setup Node
-      #   uses: actions/setup-node@v4
-      #   with:
-      #     node-version: 18
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
           
-      # - name: Build
-      #   run: |
-      #     npm install
-      #     npm run build
-      #     ls -lh
+      - name: Build
+        run: |
+          npm install
+          npm run build
+          ls -lh
 
-      - name: executing remote ssh commands using ssh key
-        uses: appleboy/ssh-action@v1.0.1
+      - name: copy file via ssh password
+        uses: appleboy/scp-action@v0.1.6
         with:
           host: ${{ secrets.REMOTE_HOST }}
           username: ${{ secrets.REMOTE_USER }}
-          key: ${{ secrets.KEY }}
+          password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          script: whoami
+          source: "dist"
+          target: ${{ secrets.TARGET }}
+
+
 
