--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,9 @@ jobs:
           npm install
           npm run build
           ls -lh
-
+        env:
+          VITE_YOURLS_API: ${{ secrets.VITE_YOURLS_API }}
+          
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.6
         with:
