--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "markmap-view": "^0.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "wouter": "^2.12.1"
+    "wouter": "^3.0.0-rc.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
