--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "markmap-view": "^0.15.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lrc": "^3.1.3",
     "wouter": "^3.0.0-rc.2"
   },
   "devDependencies": {
