--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
-.gitattributes merge=ours
->>>>>>> code
 .env merge=ours
+# Automatically normalize line endings (to LF) for all text-based files.
+* text=auto eol=lf
