--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "^4.0.3",
-    "markmap-common": "^0.15.6",
-    "markmap-lib": "^0.15.8",
-    "markmap-toolbar": "^0.15.8",
-    "markmap-view": "^0.15.8",
+    "markmap-common": "^0.17.0",
+    "markmap-lib": "^0.17.0",
+    "markmap-toolbar": "^0.17.0",
+    "markmap-view": "^0.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lrc": "^3.1.3",
@@ -34,7 +34,6 @@
     "postcss": "^8.4.32",
     "rollup-plugin-visualizer": "^5.11.0",
     "tailwindcss": "^3.3.6",
-    "vite": "^5.0.8",
-    "vite-plugin-cdn-import": "^0.3.5"
+    "vite": "^5.0.8"
   }
 }
