--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "^4.0.3",
-    "markmap-common": "^0.17.0",
-    "markmap-lib": "^0.17.0",
-    "markmap-toolbar": "^0.17.0",
-    "markmap-view": "^0.17.0",
+    "markmap-common": "^0.15.6",
+    "markmap-lib": "^0.15.8",
+    "markmap-toolbar": "^0.15.8",
+    "markmap-view": "^0.15.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-lrc": "^3.1.3",
@@ -35,5 +35,6 @@
     "rollup-plugin-visualizer": "^5.11.0",
     "tailwindcss": "^3.3.6",
     "vite": "^5.0.8"
-  }
+  },
+  "packageManager": "pnpm@10.11.0"
 }
